Added ingredient filter to Swagger route & 'no product found' error test
